<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_MCHMIMachineControl_HMI" Id="{009353af-bf5e-0475-1b5c-fcccc8c8912e}">
    <Declaration><![CDATA[TYPE ST_MCHMIMachineControl_HMI :
STRUCT
	bZmienna : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>